fix(data-grid): fix overflowing table header text when title space reduced (#2425)

--- a/packages/components/src/components/data-grid/data-grid.css
+++ b/packages/components/src/components/data-grid/data-grid.css
@@ -169,6 +169,12 @@
   color: var(--telekom-color-text-and-icon-additional);
 }
 
+.thead__text {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .thead__cell--numbered {
   text-align: right;
   justify-content: flex-end;
@@ -184,6 +190,8 @@
 }
 .thead__title {
   color: var(--telekom-color-text-and-icon-standard);
+  width: 100%;
+  display: flex;
 }
 
 .thead__text {
@@ -194,10 +202,7 @@
 
 .thead__arrow-top,
 .thead__arrow-bottom {
-  position: absolute;
   display: none !important;
-  top: -2px;
-  left: -16px;
 }
 
 .thead__sort-prompt {
